# sre-incident-env

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_smoke.py  test_tasks.py
app/: demo.py  environment.py  grader.py  main.py  models.py  simulator.py
app/scenarios/: base.py  task1_zombie.py  task2_config.py  task3_resource_leak.py
server/: app.py
